--- a/arcanoid/stack.yaml
+++ b/arcanoid/stack.yaml
@@ -9,7 +9,7 @@
 # to be used for project dependencies. For example:
 #
 # snapshot: lts-23.0
-# snapshot: nightly-2024-12-13
+snapshot: nightly-2025-04-07
 # snapshot: ghc-9.8.4
 #
 # The location of a snapshot can be provided as a file or url. Stack assumes
@@ -17,8 +17,8 @@
 #
 # snapshot: ./custom-snapshot.yaml
 # snapshot: https://example.com/snapshots/2024-01-01.yaml
-snapshot:
-  url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/23/15.yaml
+# snapshot:
+#   url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/23/15.yaml
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
